# BEM_Turbine

./: .gitignore  :00.bl  CMakeLists.txt  README.md  extensions.md  win_toolchain.cmake  windows_install
include/: analysis.h  bem_corrections.h  bem_solver.h  blade_section.h  fusion_hook.h  headers.h  helpers.h  rotor.h  solidworks_hook.h  viterna_extrapolator.h  xfoil_hook.h
naca_data/bem_data/: BLADE_BEM_CP_V_TSR_ACC.csv  NREL_BEM_ALL_CORRECTIONS.csv  NREL_BEM_MACH_CORRECTION.csv  NREL_BEM_NO_CORRECTIONS.csv  NREL_BEM_STALL_DELAY_CORR.csv  NREL_BEM_TIPROOT_CORRECTION.csv  recent_run.csv
naca_data/bem_data/NREL_DATA_QBLADE/: NREL_5MW_Blade.bld  cm_v_tsr.txt  cp_v_windspeed.txt  ct_v_tsr.txt  power_v_tsr.txt  power_v_windspeed.txt  thrust_v_tsr.txt  thrust_v_windspeed.txt  torque_v_tsr.txt
naca_data/blade_profiles/: NACA0021_optimal_distribution.json  NREL_5MW_Blade.json  blade a.json  blade b.json  blade_profile_test.json  test.json
naca_data/run_tmp/: run.xfs
scripts/: build_blade.py  create_blade_functions.py  create_blade_profile.py  create_qblade_profile.py  distribution_playground.py  plotting.py  run_fusion_build.py
scripts/Fusion 360 Script/BuildTurbineBlade/: .env  BuildTurbineBlade.py
src/: bem_solver.cpp  blade_section.cpp  main.cpp  rotor.cpp  xfoil_hook.cpp
